--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "autoHide.autoHideAuxiliaryBar": false,
   "autoHide.autoHidePanel": false,
-  "autoHide.autoHideSideBar": false
+  "autoHide.autoHideSideBar": false,
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
