--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@tanstack/react-query": "^5.62.10",
     "big.js": "^6.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,13 +33,14 @@
     "fastest-levenshtein": "^1.0.16",
     "lucia": "^3.2.2",
     "lucide-react": "^0.462.0",
-    "next": "15.1.1",
+    "next": "15.1.3",
     "next-themes": "^0.4.3",
     "nuqs": "^2.2.3",
     "react": "19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
     "react-error-boundary": "^4.1.2",
+    "react-intersection-observer": "^9.14.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -48,10 +50,10 @@
   "devDependencies": {
     "@types/big.js": "^6.2.2",
     "@types/node": "^20",
-    "@types/react": "19.0.1",
+    "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "15.1.1",
+    "eslint-config-next": "15.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "postcss": "^8",
     "prettier": "^3.4.1",
@@ -62,7 +64,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.0.1",
+      "@types/react": "19.0.2",
       "@types/react-dom": "19.0.2"
     }
   }
